workspace/coder3/autofix/original_input.txt
Traceback
  File "x.py", line 1
    def a()
           ^
SyntaxError: expected :